--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "react-firebase-hooks": "^5.1.1",
     "react-scripts": "5.0.1"
   },
+{
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "firebase deploy"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export"
+}
+
   },
   "eslintConfig": {
     "extends": [
